refactor(windows): extract FFmpeg patch shim to dedicated script and include it in cache key
- move embedded FFmpeg patch logic from `ci/windows/build_windows.ps1` to `ci/windows/patch_ffmpeg.ps1`
- update `build_windows.ps1` to reference `FFMPEG_PATCH_SHIM` from the new file
- keep OpenSSL alias re-copy + diagnostics behavior unchanged in new script
- include `ci/windows/patch_ffmpeg.ps1` in Windows build cache key/restore key in workflow

--- a/.github/workflows/openrv-release.yml
+++ b/.github/workflows/openrv-release.yml
@@ -466,9 +466,9 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: C:\OpenRV\_build
-          key: openrv-windows-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-${{ hashFiles('ci/windows/build_windows.ps1') }}-${{ hashFiles('ci/windows/ffmpeg_windows_patched.cmake') }}-${{ github.run_id }}
+          key: openrv-windows-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-${{ hashFiles('ci/windows/build_windows.ps1') }}-${{ hashFiles('ci/windows/ffmpeg_windows_patched.cmake') }}-${{ hashFiles('ci/windows/patch_ffmpeg.ps1') }}-${{ github.run_id }}
           restore-keys: |
-            openrv-windows-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-${{ hashFiles('ci/windows/build_windows.ps1') }}-${{ hashFiles('ci/windows/ffmpeg_windows_patched.cmake') }}-
+            openrv-windows-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-${{ hashFiles('ci/windows/build_windows.ps1') }}-${{ hashFiles('ci/windows/ffmpeg_windows_patched.cmake') }}-${{ hashFiles('ci/windows/patch_ffmpeg.ps1') }}-
 
       - name: Build OpenRV (Windows) - Configure
         run: .\ci\windows\build_windows.ps1 -Phase Configure -Tag "${{ env.OPENRV_TAG }}" -WorkDir "C:\OpenRV" -BMDDeckLinkSdkZipPath "${{ env.BMD_PATH }}" -NDISdkRoot "${{ env.NDI_ROOT }}"
@@ -491,7 +491,7 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: C:\OpenRV\_build
-          key: openrv-windows-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-${{ hashFiles('ci/windows/build_windows.ps1') }}-${{ hashFiles('ci/windows/ffmpeg_windows_patched.cmake') }}-${{ github.run_id }}
+          key: openrv-windows-build-${{ env.OPENRV_TAG }}-${{ steps.openrv-sha.outputs.sha }}-${{ hashFiles('ci/windows/build_windows.ps1') }}-${{ hashFiles('ci/windows/ffmpeg_windows_patched.cmake') }}-${{ hashFiles('ci/windows/patch_ffmpeg.ps1') }}-${{ github.run_id }}
 
       - name: Upload Windows build logs
         if: always()
