--- a/.github/workflows/openrv-release-windows.yml
+++ b/.github/workflows/openrv-release-windows.yml
@@ -164,7 +164,7 @@ jobs:
           name: windows
           path: dist/OpenRV-${{ env.OPENRV_TAG }}-windows-x86_64.zip
 
-      - name: Generate Release Body From Upstream OpenRV Commit
+      - name: Generate Release Body From Upstream OpenRV Tag Message
         if: success()
         shell: bash
         run: |
@@ -174,27 +174,54 @@ jobs:
           cd openrv-meta
           git remote add origin "${{ env.OPENRV_REPO }}"
 
-          SHA="$(git ls-remote origin "refs/tags/${{ env.OPENRV_TAG }}^{}" | cut -f1)"
-          if [[ -z "$SHA" ]]; then
-            SHA="$(git ls-remote origin "refs/tags/${{ env.OPENRV_TAG }}" | cut -f1)"
-          fi
-          if [[ -z "$SHA" ]]; then
-            echo "ERROR: Could not resolve upstream tag '${{ env.OPENRV_TAG }}' in ${{ env.OPENRV_REPO }}"
+          TAG="${{ env.OPENRV_TAG }}"
+          TAG_REF="refs/tags/${TAG}"
+
+          TAG_OBJ_SHA="$(git ls-remote origin "$TAG_REF" | cut -f1)"
+          COMMIT_SHA="$(git ls-remote origin "${TAG_REF}^{}" | cut -f1)"
+
+          if [[ -z "$TAG_OBJ_SHA" && -z "$COMMIT_SHA" ]]; then
+            echo "ERROR: Could not resolve upstream tag '${TAG}' in ${{ env.OPENRV_REPO }}"
             exit 1
           fi
 
-          git fetch --depth 1 origin "$SHA"
-          SUBJECT="$(git show -s --format=%s "$SHA")"
-          BODY="$(git show -s --format=%b "$SHA")"
+          if [[ -z "$COMMIT_SHA" ]]; then
+            COMMIT_SHA="$TAG_OBJ_SHA"
+          fi
+
+          if [[ -n "$TAG_OBJ_SHA" ]]; then
+            git fetch --depth 1 origin "$TAG_OBJ_SHA"
+          fi
+          if [[ -n "$COMMIT_SHA" && "$COMMIT_SHA" != "$TAG_OBJ_SHA" ]]; then
+            git fetch --depth 1 origin "$COMMIT_SHA"
+          fi
+
+          TAG_MESSAGE=""
+          TAG_TYPE=""
+          if [[ -n "$TAG_OBJ_SHA" ]]; then
+            TAG_TYPE="$(git cat-file -t "$TAG_OBJ_SHA" 2>/dev/null || true)"
+            if [[ "$TAG_TYPE" == "tag" ]]; then
+              TAG_MESSAGE="$(git cat-file -p "$TAG_OBJ_SHA" | sed '1,/^$/d' | sed '/^-----BEGIN PGP SIGNATURE-----/,$d')"
+            fi
+          fi
+
+          FALLBACK_NOTE=""
+          if [[ -z "${TAG_MESSAGE//[[:space:]]/}" ]]; then
+            TAG_MESSAGE="$(git show -s --format=%B "$COMMIT_SHA")"
+            FALLBACK_NOTE="_Note: upstream tag is lightweight (no annotation); showing commit message._"
+          fi
+
           cd ..
 
           {
-            echo "Upstream OpenRV commit for \`${{ env.OPENRV_TAG }}\`:"
-            echo "\`$SHA\`"
+            echo "Upstream OpenRV tag message for \`${TAG}\`:"
+            echo "\`$COMMIT_SHA\`"
             echo
-            echo "$SUBJECT"
-            echo
-            echo "$BODY"
+            if [[ -n "$FALLBACK_NOTE" ]]; then
+              echo "$FALLBACK_NOTE"
+              echo
+            fi
+            echo "$TAG_MESSAGE"
           } > release-body.md
 
       - name: Publish Windows Release Asset
