--- a/.github/workflows/openrv-release-rocky8.yml
+++ b/.github/workflows/openrv-release-rocky8.yml
@@ -46,6 +46,31 @@ jobs:
         run: |
           git clone --depth 1 --branch "${{ env.OPENRV_TAG }}" "${{ env.OPENRV_REPO }}" openrv-src
 
+      - name: Resolve upstream tag commit
+        shell: bash
+        run: |
+          set -euo pipefail
+          TAG_REF="refs/tags/${{ env.OPENRV_TAG }}"
+          COMMIT_SHA="$(git ls-remote "${{ env.OPENRV_REPO }}" "${TAG_REF}^{}" | cut -f1)"
+          if [[ -z "$COMMIT_SHA" ]]; then
+            COMMIT_SHA="$(git ls-remote "${{ env.OPENRV_REPO }}" "${TAG_REF}" | cut -f1)"
+          fi
+          if [[ -z "$COMMIT_SHA" ]]; then
+            echo "ERROR: could not resolve upstream commit for ${TAG_REF}"
+            exit 1
+          fi
+          echo "UPSTREAM_SHA=${COMMIT_SHA}" >> "$GITHUB_ENV"
+          echo "UPSTREAM_SHA_SHORT=${COMMIT_SHA:0:12}" >> "$GITHUB_ENV"
+
+      - name: Restore Rocky8 build cache (_build)
+        id: restore-rocky8-build-cache
+        uses: actions/cache/restore@v4
+        with:
+          path: openrv-build-cache-rocky8
+          key: openrv-rocky8-build-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-${{ github.run_id }}-${{ github.run_attempt }}
+          restore-keys: |
+            openrv-rocky8-build-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -57,9 +82,19 @@ jobs:
           load: true
           tags: openrv-rocky8-base
           push: false
+          cache-from: type=gha,scope=rocky8
+          cache-to: type=gha,mode=max,scope=rocky8
 
       - name: Build extended Docker image (vanilla + GL/devel packages)
-        run: docker build -f ci/linux/Dockerfile.rocky8-extended -t openrv-build-rocky8 .
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ci/linux/Dockerfile.rocky8-extended
+          load: true
+          tags: openrv-build-rocky8
+          push: false
+          cache-from: type=gha,scope=rocky8-ext
+          cache-to: type=gha,mode=max,scope=rocky8-ext
 
       - name: Reclaim Space Before Build (Rocky 8)
         run: |
@@ -86,11 +121,20 @@ jobs:
             -e OPENRV_REPO="${{ env.OPENRV_REPO }}" \
             -e DISTRO_SUFFIX=linux-rocky8 \
             -e RV_VFX_PLATFORM=CY2023 \
+            -e OPENRV_BUILD_CACHE_DIR=/home/rv/openrv-build-cache \
             $BMD_E $NDI_E \
             -v "${{ github.workspace }}/ci/linux:/ci:ro" \
             -v "${{ github.workspace }}/out:/out" \
+            -v "${{ github.workspace }}/openrv-build-cache-rocky8:/home/rv/openrv-build-cache" \
             openrv-build-rocky8 \
             bash /ci/build_in_container.sh 2>&1 | tee out/logs/build-linux-rocky8.log
+
+      - name: Save Rocky8 build cache (_build)
+        if: always()
+        uses: actions/cache/save@v4
+        with:
+          path: openrv-build-cache-rocky8
+          key: ${{ steps.restore-rocky8-build-cache.outputs.cache-primary-key }}
 
       - name: Upload Rocky8 logs
         if: always()
