fix(ci): stabilize Linux GLEW pathing and harden deps toolchain/import-lib handling
Linux: make GLEW prebuilt-source commands detect real extracted root ({_version}/glew-{_version}/.) so builds stop failing on glew-glew-2.3.0.

Linux: add Rust toolchain packages to Rocky8, Rocky9, and Ubuntu images to unblock cryptography source builds when wheels are unavailable.

Windows: harden OpenSSL import-lib rename helper to resolve ssl/crypto libs across name/layout variants via direct and recursive fallback search.

--- a/ci/linux/Dockerfile.rocky8-extended
+++ b/ci/linux/Dockerfile.rocky8-extended
@@ -10,6 +10,8 @@ RUN dnf install -y \
     mesa-libGL-devel \
     libglvnd-devel \
     libdrm-devel \
+    rust \
+    cargo \
     pkg-config \
     && dnf clean all
 
