--- a/ci/linux/Dockerfile.rocky9-cy2024
+++ b/ci/linux/Dockerfile.rocky9-cy2024
@@ -10,6 +10,8 @@ RUN dnf install -y \
     mesa-libGL-devel \
     libglvnd-devel \
     libdrm-devel \
+    rust \
+    cargo \
     pkg-config \
     && dnf clean all
 
