Harden CI cache handling for OpenRV v3.1.0 builds (Linux + Windows)
- fix(linux): clear stale CMake/AUTOGEN state from cached `_build` on all distros
  - remove Ubuntu-only guard in `ci/linux/build_in_container.sh`
  - always reset `CMakeCache.txt`, `CMakeFiles`, and `src/**/_autogen` when cache state exists
  - resolves stale Qt moc include-path failures seen on Rocky8/Rocky9/Ubuntu

- fix(windows): recover from stale/incomplete OpenSSL ExternalProject cache state
  - add `Reset-StaleOpenSSLDependencyState` in `ci/windows/build_windows.ps1`
  - detect missing OpenSSL import libs and purge only `RV_DEPS_OPENSSL` artifacts/stamps
  - force clean OpenSSL dependency rebuild before `BuildDependencies`

- ci(cache): prevent poisoning `_build` caches across retries
  - change `_build` cache save to `if: success()` (was `always()`) for:
    - `.github/workflows/openrv-release-windows.yml`
    - `.github/workflows/openrv-release-rocky8.yml`
    - `.github/workflows/openrv-release-rocky9.yml`
    - `.github/workflows/openrv-release-ubuntu.yml`
  - bump `_build` cache key namespace to `*-build-v2-*` to invalidate previously bad cache entries

--- a/.github/workflows/openrv-release-windows.yml
+++ b/.github/workflows/openrv-release-windows.yml
@@ -208,9 +208,9 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: C:\OpenRV\_build
-          key: openrv-windows-build-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-${{ github.run_id }}-${{ github.run_attempt }}
+          key: openrv-windows-build-v2-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-${{ github.run_id }}-${{ github.run_attempt }}
           restore-keys: |
-            openrv-windows-build-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-
+            openrv-windows-build-v2-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-
 
       - name: Build OpenRV (Windows) - Python venv
         run: .\ci\windows\build_windows.ps1 -Phase Venv -Tag "${{ env.OPENRV_TAG }}" -WorkDir "C:\OpenRV"
@@ -244,7 +244,7 @@ jobs:
             C:\OpenRV\_build\**\config.log
 
       - name: Save Windows build cache (_build)
-        if: always()
+        if: success()
         uses: actions/cache/save@v4
         with:
           path: C:\OpenRV\_build
