--- a/.github/workflows/openrv-release-rocky9.yml
+++ b/.github/workflows/openrv-release-rocky9.yml
@@ -1,4 +1,4 @@
-name: OpenRV Release - Rocky 9
+﻿name: OpenRV Release - Rocky 9
 
 on:
   push:
@@ -67,9 +67,9 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: openrv-build-cache-rocky9
-          key: openrv-rocky9-build-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-${{ github.run_id }}-${{ github.run_attempt }}
+          key: openrv-rocky9-build-v2-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-${{ github.run_id }}-${{ github.run_attempt }}
           restore-keys: |
-            openrv-rocky9-build-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-
+            openrv-rocky9-build-v2-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -123,7 +123,7 @@ jobs:
             bash /ci/build_in_container.sh 2>&1 | tee out/logs/build-linux-rocky9.log
 
       - name: Save Rocky9 build cache (_build)
-        if: always()
+        if: success()
         uses: actions/cache/save@v4
         with:
           path: openrv-build-cache-rocky9
@@ -263,3 +263,4 @@ jobs:
           for part in "${ASSET}.part."*; do
             upload_with_retry "$part"
           done
+
