--- a/.github/workflows/openrv-release-ubuntu.yml
+++ b/.github/workflows/openrv-release-ubuntu.yml
@@ -1,4 +1,4 @@
-name: OpenRV Release - Ubuntu 22.04
+﻿name: OpenRV Release - Ubuntu 22.04
 
 on:
   push:
@@ -63,9 +63,9 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: openrv-build-cache-ubuntu22
-          key: openrv-ubuntu22-build-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-${{ github.run_id }}-${{ github.run_attempt }}
+          key: openrv-ubuntu22-build-v2-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-${{ github.run_id }}-${{ github.run_attempt }}
           restore-keys: |
-            openrv-ubuntu22-build-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-
+            openrv-ubuntu22-build-v2-${{ env.OPENRV_TAG }}-${{ env.UPSTREAM_SHA_SHORT }}-
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -115,7 +115,7 @@ jobs:
             /ci/build_in_container.sh 2>&1 | tee out/logs/build-linux-ubuntu22.04.log
 
       - name: Save Ubuntu build cache (_build)
-        if: always()
+        if: success()
         uses: actions/cache/save@v4
         with:
           path: openrv-build-cache-ubuntu22
@@ -255,3 +255,4 @@ jobs:
           for part in "${ASSET}.part."*; do
             upload_with_retry "$part"
           done
+
